WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213852
Regression(
r259242
) WebKit no longer does client navigations at foreground priority for extensions
https://bugs.webkit.org/show_bug.cgi?id=213852
Summary
Regression(r259242) WebKit no longer does client navigations at foreground pr...
Chris Dumez
Reported
2020-07-01 10:02:54 PDT
WebKit no longer does client navigations at foreground priority for extensions since
r259242
.
Attachments
Patch
(3.02 KB, patch)
2020-07-01 10:08 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-07-01 10:03:10 PDT
<
rdar://problem/63300428
>
Chris Dumez
Comment 2
2020-07-01 10:08:47 PDT
Created
attachment 403303
[details]
Patch
EWS
Comment 3
2020-07-01 10:42:12 PDT
Committed
r263816
: <
https://trac.webkit.org/changeset/263816
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403303
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug